# splax

./: .gitignore  README.md  environment.yaml  pyproject.toml
src/splax/: cameras.py  dataset.py  gaussians.py  loader.py  renderer.py  utils.py
