[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splax"
version = "0.1.0"
authors = [
    { name = "Mauro Comi" },
]
description = "A Gaussian Splatting engine in JAX."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "jax[cuda]",
    "jaxlib",
    "optax",
    "jaxtyping",
    "PyYAML",
    "Pillow",
    "tqdm",
    "einops",
    "mediapy",
    "orbax",
    "orbax-checkpoint",
    "ipykernel",
    "huggingface_hub",
    "nerfstudio"
]

[tool.setuptools]
package-dir = { "" = "src" }
